Name: explosion
Version: 0.1
License: BSD3
License-file: LICENSE
Author: Hao Lian
Maintainer: me@haolian.org
Category: Network
Build-type: Simple
Cabal-version: >=1.8

Library
  Exposed-modules: Network.Protocol.Explosion
  Build-depends: base,
                 bytestring>=0.9.1,
                 conduit>=0.2.1,
                 cprng-aes>=0.2.3,
                 mtl,
                 network>=2.3.0.6,
                 tls>=0.9.0,
                 tls-extra>=0.4.3,
                 transformers>=0.2.2.0,
                 transformers-base>=0.4.1
  Hs-source-dirs: src

Executable test-telnet
  Main-is: Telnet.hs
  Build-depends: base, network>=2.3.0.6, explosion
  Hs-source-dirs: test

